openturns/1.22/_sources/auto_reliability_sensitivity/reliability/plot_flood_model.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_reliability_sensitivity/reliability/plot_flood_model.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_reliability_sensitivity_reliability_plot_flood_model.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_reliability_sensitivity_reliability_plot_flood_model.py:


Estimate a flooding probability
===============================

.. GENERATED FROM PYTHON SOURCE LINES 6-8

In this example, we estimate the probability that the output of a function exceeds a given threshold with the FORM method.
We consider the :ref:`flooding model <use-case-flood-model>`.

.. GENERATED FROM PYTHON SOURCE LINES 11-13

Define the model
----------------

.. GENERATED FROM PYTHON SOURCE LINES 15-22

.. code-block:: Python

    from openturns.usecases import flood_model
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt

    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 23-24

We load the flooding model from the usecases module :

.. GENERATED FROM PYTHON SOURCE LINES 24-28

.. code-block:: Python

    fm = flood_model.FloodModel()
    distribution = fm.distribution
    model = fm.model.getMarginal(1)








.. GENERATED FROM PYTHON SOURCE LINES 29-30

See the input distribution

.. GENERATED FROM PYTHON SOURCE LINES 30-32

.. code-block:: Python

    distribution






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    ComposedDistribution
    <ul>
      <li>name=ComposedDistribution</li>
      <li>dimension: 8</li>
      <li>description=[Q (m3/s),Ks,Zv (m),Zm (m),B (m),L (m),Zb (m),Hd (m)]
      <li>copula: IndependentCopula(dimension = 8)</li>
    </ul>

    <table>
      <tr>
        <th>Index</th>
        <th>Variable</th>
        <th>Distribution</th>
      </tr>
      <tr>
        <td>0</td>
        <td>Q (m3/s)</td>
        <td>TruncatedDistribution(Gumbel(beta = 558, gamma = 1013), bounds = [0, (19000.8) +inf[)</td>
      </tr>
      <tr>
        <td>1</td>
        <td>Ks</td>
        <td>TruncatedDistribution(Normal(mu = 30, sigma = 7.5), bounds = [0, (87.3797) +inf[)</td>
      </tr>
      <tr>
        <td>2</td>
        <td>Zv (m)</td>
        <td>Uniform(a = 49, b = 51)</td>
      </tr>
      <tr>
        <td>3</td>
        <td>Zm (m)</td>
        <td>Uniform(a = 54, b = 56)</td>
      </tr>
      <tr>
        <td>4</td>
        <td>B (m)</td>
        <td>Triangular(a = 295, m = 300, b = 305)</td>
      </tr>
      <tr>
        <td>5</td>
        <td>L (m)</td>
        <td>Triangular(a = 4990, m = 5000, b = 5010)</td>
      </tr>
      <tr>
        <td>6</td>
        <td>Zb (m)</td>
        <td>Triangular(a = 55, m = 55.5, b = 56)</td>
      </tr>
      <tr>
        <td>7</td>
        <td>Hd (m)</td>
        <td>Uniform(a = 2, b = 4)</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 33-34

See the model

.. GENERATED FROM PYTHON SOURCE LINES 34-36

.. code-block:: Python

    model.getOutputDescription()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    [S]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 37-38

Draw the distribution of a sample of the output.

.. GENERATED FROM PYTHON SOURCE LINES 38-44

.. code-block:: Python

    sampleSize = 1000
    inputSample = distribution.getSample(sampleSize)
    outputSample = model(inputSample)
    graph = ot.HistogramFactory().build(outputSample).drawPDF()
    _ = viewer.View(graph)




.. image-sg:: /auto_reliability_sensitivity/reliability/images/sphx_glr_plot_flood_model_001.png
   :alt: S PDF
   :srcset: /auto_reliability_sensitivity/reliability/images/sphx_glr_plot_flood_model_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 45-47

Define the event
----------------

.. GENERATED FROM PYTHON SOURCE LINES 49-50

Then we create the event whose probability we want to estimate.

.. GENERATED FROM PYTHON SOURCE LINES 52-57

.. code-block:: Python

    vect = ot.RandomVector(distribution)
    G = ot.CompositeRandomVector(model, vect)
    event = ot.ThresholdEvent(G, ot.Greater(), 0.0)
    event.setName("overflow")








.. GENERATED FROM PYTHON SOURCE LINES 58-60

Estimate the probability with FORM
----------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 62-63

Define a solver.

.. GENERATED FROM PYTHON SOURCE LINES 65-72

.. code-block:: Python

    optimAlgo = ot.Cobyla()
    optimAlgo.setMaximumEvaluationNumber(1000)
    optimAlgo.setMaximumAbsoluteError(1.0e-10)
    optimAlgo.setMaximumRelativeError(1.0e-10)
    optimAlgo.setMaximumResidualError(1.0e-10)
    optimAlgo.setMaximumConstraintError(1.0e-10)








.. GENERATED FROM PYTHON SOURCE LINES 73-74

Run FORM.

.. GENERATED FROM PYTHON SOURCE LINES 76-82

.. code-block:: Python

    startingPoint = distribution.getMean()
    algo = ot.FORM(optimAlgo, event, startingPoint)
    algo.run()
    result = algo.getResult()
    standardSpaceDesignPoint = result.getStandardSpaceDesignPoint()








.. GENERATED FROM PYTHON SOURCE LINES 83-84

Retrieve results.

.. GENERATED FROM PYTHON SOURCE LINES 86-90

.. code-block:: Python

    result = algo.getResult()
    probability = result.getEventProbability()
    print("Pf=", probability)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Pf= 0.0006501344567730391




.. GENERATED FROM PYTHON SOURCE LINES 91-92

Importance factors.

.. GENERATED FROM PYTHON SOURCE LINES 94-97

.. code-block:: Python

    graph = result.drawImportanceFactors()
    view = viewer.View(graph)
    plt.show()



.. image-sg:: /auto_reliability_sensitivity/reliability/images/sphx_glr_plot_flood_model_002.png
   :alt: Importance Factors from Design Point - overflow
   :srcset: /auto_reliability_sensitivity/reliability/images/sphx_glr_plot_flood_model_002.png
   :class: sphx-glr-single-img






.. _sphx_glr_download_auto_reliability_sensitivity_reliability_plot_flood_model.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_flood_model.ipynb <plot_flood_model.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_flood_model.py <plot_flood_model.py>`
